# QC-interactive-Education-Package

./: Dockerfile  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt  test.ipynb  test.py
src/qc_education_package/: __init__.py  app.ipynb  challenge.ipynb  interactive_visualization.py  launch_viewer.py  visualization.py
src/qc_interactive_education_package/: Dockerfile  __init__.py  app.ipynb  challenge.ipynb  dim_Bloch_spheres.py  index.ipynb  interactive_visualization.py  launch_viewer.py  library_manager.py  quantum_library.py  simulator.py  visualization.py
